# mini-code-agent

./: README.md  STUDY.md  pyproject.toml
codeagent/: agent.py  config.py  logger.py  main.py  memory.py  providers.py  tools.py
codeagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_config.py  test_e2e.py  test_logger.py  test_memory.py  test_tools.py
